# project-euler-solutions

./: .gitignore  README.md  pyproject.toml
euler/: __init__.py  problem_001.py  runner.py
solutions/problem_001/: README.md  problem_001.py
solutions/problem_002/: README.md  problem_002.py
solutions/problem_004/: README.md  problem_004.py
solutions/problem_006/: README.md  problem_006.py
solutions/problem_007/: README.md  problem_007.py
solutions/problem_008/: README.md  problem_008.py
solutions/problem_009/: README.md  problem_009.py
solutions/problem_010/: README.md  problem_010.py
solutions/problem_012/: README.md  problem_012.py
solutions/problem_013/: README.md  problem_013.py  problem_013_numbers.txt
solutions/problem_015/: README.md  problem_015.py
solutions/problem_016/: README.md  problem_016.py
solutions/problem_017/: README.md  problem_017.py
solutions/problem_019/: README.md  problem_019.py
solutions/problem_020/: README.md  problem_020.py
solutions/problem_021/: README.md  problem_021.py
solutions/problem_023/: README.md  problem_023.py
solutions/problem_025/: README.md  problem_025.py
solutions/problem_026/: README.md  problem_026.py
solutions/problem_029/: README.md  problem_029.py
solutions/problem_030/: README.md  problem_030.py
solutions/problem_031/: README.md  problem_031.py
solutions/problem_032/: README.md  problem_032.py
solutions/problem_033/: README.md  problem_033.py
solutions/problem_034/: README.md  problem_034.py
solutions/problem_035/: README.md  p_euler.py  (+1 more)
tests/: test_problem_001.py
(+64 files in other folders)
